--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
-      <h1>Mike Jones' Wikihow instructions for filming a Short Documentary</h1>
+      <h1>Shooting a Short Documentary Film w/ Mike Jones</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
