--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
+      <img src="https://drive.google.com/drive/my-drive" width="100" align="right" height="100" alt="MJ_monogram">            
       <h1>Shooting a Short Documentary Film w/ Mike Jones</h1>
       <h3>The making of a Short Documentary Film</h3>
 
