--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://drive.google.com/drive/my-drive" width="100" align="right" height="100" alt="MJ_monogram">            
+      <img src="https://imgur.com/1QJNwNP"><img src="https://i.imgur.com/1QJNwNP.png" 
+" width="100" align="right" height="100" alt="MJ_monogram">            
       <h1>Shooting a Short Documentary Film w/ Mike Jones</h1>
       <h3>The making of a Short Documentary Film</h3>
 
