--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Choose a subject.</h3>
-              <pWhat you want to make a film about. Remember, you'll need to complete the project. Think about who, what, and where you'll shoot. Form a basic idea for a story and if you're having trouble, read short stories for inspiration.</p> 
+              <p>What you want to make a film about. Remember, you'll need to complete the project. Think about who, what, and where you'll shoot. Form a basic idea for a story and if you're having trouble, read short stories for inspiration.</p> 
             </div>
           </li>
 
