--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Script your story idea.</h3>
+              <p>You will need to have a script, or you can't have a film. While thinking of an idea, make sure you write something attractive to your viewers. For example, If you're giving the script to someone who likes drama, add lots of drama. Comedy, add comedy, etc.</p>
 
               <!--
 This block contains a photo and has a caption.
