--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://imgur.com/1QJNwNP"><img src="https://i.imgur.com/1QJNwNP.png" "><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+              <a data-flickr-embedded=”true” href="https://imgur.com/1QJNwNP"><img src="https://i.imgur.com/1QJNwNP.png" "https://imgur.com/1QJNwNP"><img src="https://i.imgur.com/1QJNwNP.png" > height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
               <p class="caption"> Having a subject and a script can help speed up tis process.</p>
             </div>
           </li>
