--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Shoot your footage.</h3>
+              <p> If you want to highlight your pet, you can shoot video of your pet eating, sleeping and playing and perhaps put it to music. If you are under a tight time pressure, consider using a second camera as this will enable you to be twice as efficient.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -153,16 +153,16 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Log footage.</h3>
+              <p>Before you proceed to editing your film watch all your footage through, writing notes on every shots stating if it works, are there technical problems. This will save you a lot of time when editing.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Edit your film.</h3>
+              <p>Many cameras edit in limited ways and some have special effects. Learn how to "cut" pieces of your footage together and put music or speech over your video. Check your camera's manual or use a software package like iMovie to make your final cuts. One way is to use your VCR or DVD burner to make copies for friends and auditions. If your film is digital, you can also output your final edit to a readable format to send via email. Also if your film is in digital format you can upload to YouTube or another video sharing site. Check up with the website's video formats to see if you can upload your movie.</p> 
             </div>
           </li>
 
