--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ with a paragraph to create a photo with a caption.
               <p> If you want to highlight your pet, you can shoot video of your pet eating, sleeping and playing and perhaps put it to music. If you are under a tight time pressure, consider using a second camera as this will enable you to be twice as efficient.</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+              <iframe width=”560” height=”315” src=”https://www.youtube.com/watch?v=NCN8b1MvBGU” frameborder=”0” allow=”accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture” allowfullscreen></iframe>
             </div>
 
           </li>
