--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a></a>
+            <a href="https://www.flickr.com/photos/davidschweitzer/20139911099/in/photolist-wFGiUx-MGRrFx-2acttvk-waavDs-ckH2wh-Ka16u8-2kmstgc-4YFQK8-2cnZzyX-6qP1WW-2jt1vtC-2nC42An-2jMzT3o-2hyRik7-2hkD7nB-2hj8ga6-J74rcG-aKeWC4-Fp9zpM-HmSe6V-22Tjsv-2mbr9cg-2hnbZMH-2j4CnJ1-2hng4wD-2hj72E2-2j9LoWJ-2hvjwS2-2iYzX2i-2oeA62i-2aw1Xx2-2oerPxk-2hkCoiW-2hna6bX-6DdvoS-2hFMv4w-jh9rT2-KXhpZp-2aPgSHh-nNXULS-nLSTDW-EwYUrQ-2jo8Fiy-qsd1H2-29N9j2W-2hn8hXi-2nr7bog-2oc4FNL-pw9LAP-2nLshLo">https://www.flickr.com/photos/davidschweitzer/20139911099/in/photolist-wFGiUx-MGRrFx-2acttvk-waavDs-ckH2wh-Ka16u8-2kmstgc-4YFQK8-2cnZzyX-6qP1WW-2jt1vtC-2nC42An-2jMzT3o-2hyRik7-2hkD7nB-2hj8ga6-J74rcG-aKeWC4-Fp9zpM-HmSe6V-22Tjsv-2mbr9cg-2hnbZMH-2j4CnJ1-2hng4wD-2hj72E2-2j9LoWJ-2hvjwS2-2iYzX2i-2oeA62i-2aw1Xx2-2oerPxk-2hkCoiW-2hna6bX-6DdvoS-2hFMv4w-jh9rT2-KXhpZp-2aPgSHh-nNXULS-nLSTDW-EwYUrQ-2jo8Fiy-qsd1H2-29N9j2W-2hn8hXi-2nr7bog-2oc4FNL-pw9LAP-2nLshLo</a>
               <p class="caption"> Having a subject and a script can help speed up the process.</p>
             </div>
           </li>
@@ -182,8 +182,8 @@ Change the text and links in the footer of this page to acknowledge the sources 
 -->         
 
     <footer>
-      <p>The original how-to appeared in <a href="http://www.wikihow.com/Hide-Christmas/Birthday-Presents" title="How to Hide Christmas/Birthday Presents: 7 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="http://www.flickr.com/photos/puuikibeach/4655440844/" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>The original how-to appeared in <a href=" https://www.wikihow.com/Make-a-Short-Documentary-Film" title="How to make a Short Documentary Film - wikiHow">WikiHow</a>.</p>
+      <p>Images are by <a href="https://flic.kr/p/wFGiUx" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
     </footer>
 
     <!--
