--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@ with a paragraph to create a photo with a caption
               <h3>Shoot your footage.</h3>
               <p> If you want to highlight your pet, you can shoot video of your pet eating, sleeping and playing and perhaps put it to music. If you are under a tight time pressure, consider using a second camera as this will enable you to be twice as efficient.</p>
 
-
-              <iframe width=”560” height=”315” src=”https://www.youtube.com/watch?v=NCN8b1MvBGU” frameborder=”0” allow=”accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture” allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/YmQfPHLCjdg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
           </li>
