--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #C1CC9C;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #E0E6CD;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
