--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .step-by-step li:before {
-        background: #C1CC9C;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background:#E0E6CD;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
